MH-2463: fixed overlapping UI elements in recording screens
git-svn-id: https://opencast.jira.com/svn/MH/trunk@6403 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
+++ b/modules/matterhorn-admin-ui/src/main/resources/ui/css/admin.css
@@ -239,6 +239,15 @@ select { font-size:1.15em; }
     /*margin-top:50px;*/
 }
 
+#recordings-table-container {
+    background:white;
+    /*margin-top:50px;*/
+}
+
+#recordingsTable th {
+  padding-right:20px;
+}
+
 #stage {
     background:white;
     padding-left: 12px; /**/
